# BrokerAI

./: .cursorrules  .gitignore  AGENTS.md  README.md  example.env  pyproject.toml  requirements.txt
.agents/: architect.md  code-reviewer.md  data-pipeline-engineer.md  documentation-writer.md  implementation-engineer.md  market-data-specialist.md  testing-engineer.md
.cursor/: mcp.json
config/: config.env.example
ct/: brokerai.sh
docs/: README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
install/: brokerai-install.sh
scripts/: apply-domain-tls.sh  auto-update.sh  backfill_trade_candle_anchors.py  backup-postgres.sh  bootstrap-admin.sh  build-frontend.sh  check-update.sh  cleanup_strategy_orphan_indicators.py  dev-onboarding.sh  dev.sh  diagnose_entry_vs_candle.py  install-lxc.sh  load-env.fish  migrate_trades_to_broker_lots.py  place_random_oanda_trade.py  provision-admin-user.sh  setup-dev-oidc.sh  setup-supabase.sh  update-now.sh
systemd/: brokerai-orchestrator.service  brokerai-postgres-backup.service  brokerai-postgres-backup.timer  brokerai-update.service  brokerai-update.timer  brokerai-web.service
tests/: conftest.py  test_ai_strategy_activity.py  test_ai_strategy_instruments.py  test_ai_strategy_slice1.py  test_ai_strategy_slice2.py  test_ai_strategy_slice3.py  test_ai_strategy_slice4.py  test_ai_strategy_startup.py  test_ai_strategy_startup_status.py  test_api_source_models.py  test_architecture_baseline.py  test_asset_settings.py  test_atr_min_value_jpy.py  test_auth_oidc.py  test_backtest_coordinator_orphans.py  test_backtest_runs_repository.py  test_backtest_runs_route.py  test_backtest_settings_repository.py  test_backtesting_ai_feedback.py  test_backtesting_engine.py  test_backtesting_metrics.py  test_backtesting_periods.py  test_backtesting_same_bar_entry.py  test_backtesting_simulator.py  test_broker_events.py  test_broker_execution_recording.py  test_broker_ids.py  test_broker_migration.py  test_broker_normalize.py  test_broker_reconciliation.py  test_broker_state.py  test_broker_sync.py  test_broker_sync_state.py  (+89 more)
(+720 files in other folders)
