[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brokerai"
version = "0.0.8"
description = "Multi-bot trading platform with web monitoring UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "motor>=3.6.0",
    "bcrypt>=4.2.0",
    "tenacity>=9.0",
    "python-multipart>=0.0.12",
    "itsdangerous>=2.2.0",
    "feedparser>=6.0.11",
]

[project.scripts]
brokerai = "brokerai.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
brokerai = ["web/static/**/*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
data = [
    "pandas>=2.0",
    "tqdm>=4.66",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
